[package]
name = "titanf"
authors = ["hoteira"]
version = "0.1.0"
edition = "2024"

[lib]
name = "titanf"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dev-dependencies]
fontdue = "0.9.3"
ab_glyph = "0.2.32"
rusttype = "0.9.3"
criterion = "0.7.0"

[[bench]]
name = "cjk_latin_bench"
harness = false

