[package]
name = "titanf"
version = "0.1.1"
authors = ["Hoteira <hoteira@proton.me"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Hoteira/titan-f"
description = "Blazingly fast, no_std compatible font rasterizer written in pure Rust"
keywords = ["font", "rasterizer", "truetype", "rendering", "text"]
categories = ["graphics", "rendering", "no-std"]
homepage = "https://github.com/Hoteira/titan-f"
documentation = "https://docs.rs/titanf"

exclude = [
    "img/*",
    "benches/*",
    ".github/*",
    "target/*",
    "*.ttf"
]


[lib]
name = "titanf"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dev-dependencies]
fontdue = "0.9.3"
ab_glyph = "0.2.32"
rusttype = "0.9.3"
criterion = "0.7.0"

[[bench]]
name = "cjk_latin_bench"
harness = false

